--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,3 +22,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+/* .listPoster {
+  padding: 20px;
+} */
+
+.detailGenre {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.detailGenreText {
+  padding-right: 10px;
+  padding-left: 10px;
+}
