--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color:aquamarine;
 }
+
+/* .card {
+  padding-left: auto;
+  padding-right: auto;
+} */
+
+/* .listPoster {
+  padding-right: auto;
+  padding-left: auto;
+  ;
+} */
+
+
+
+
+
+
